# mite_extras

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  bottromycin.py  input_file_splitter.py  mcjB.json  mcjC.json  mibH.json  mite_extras.drawio  pyproject.toml  rebH.json
.github/workflows/: ci.yml  publish_pypi.yml
ain/: test.json
aout/: test.json
api/: api.py  models.py  queries.py
doc/api/: Makefile  mite_api.yaml  redocly.yaml
doc/api/paths/validation/: post.yaml
doc/api/rapidoc/: index.html
doc/api/schemas/: _index.yaml  item.yaml  validationItem.yaml  validationObject.yaml  validationResult.yaml
example_input/: MITE0000000.json  new608.json
example_input/mite/: MITE0000004.json
example_input/raw/: new608.json
model/: data_model.py
src/mite_extras/: __init__.py  main.py  validator.py
src/mite_extras/cli/: cli_manager.py
src/mite_extras/processing/: data_classes.py  file_manager.py  mibig_id_mappings.csv  mite_parser.py  parser.py  raw_parser.py  validation_manager.py
src/mite_extras/processing/templates/: entry.html
src/mite_extras/schema/: entry.json  mite.drawio  schema_manager.py
src/mite_extras/schema/commons/: changelog.json  citation.json
src/mite_extras/schema/definitions/: enzyme.json  reactions.json
tests/: test_main.py  test_validator.py
tests/test_cli_manager/: test_cli_manager.py
tests/test_processing/: test_data_classes.py  test_file_manager.py  test_mite_parser.py  test_parser.py  test_raw_parser.py  test_validation_manager.py
tests/test_processing/example_indir_mite/: example_valid.json
tests/test_processing/example_indir_raw/: example_valid.json
tests/test_processing/test_validation_manager/: test_canonicalize_smarts.py  test_canonicalize_smiles.py  test_cleanup_ids.py  test_cleanup_reaction_smarts.py  test_remove_ketcher_flavor_smarts.py  test_unescape_string.py  test_validate_reaction_smarts.py
tests/test_processing/validation_manager/: test_canonicalize_smarts.py  test_canonicalize_smiles.py  test_check_reaction_smarts.py  test_validate_reaction_smarts.py
tests/test_schema/: example.json  example_valid.json  test_schema.py  test_schema_manager.py
