[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
"Repository" = "https://github.com/mmzdouc/mite_extras"

[project]
name = "mite_extras"
version = "0.0.1"
description = "Parsing, conversion, and validation functionality for Minimum Information about a Tailoring Enzyme (MITE) files."
readme = "README.md"
requires-python = ">=3.12"
license-files = { paths = ["LICENSE"] }
authors = [
    { name = "Mitja M. Zdouc", email = "zdoucmm@gmail.com" },
    { name = "Adriano Rutz", email = "adafede@gmail.com" }
    ]
dependencies = [
    "argparse~=1.4",
    "coloredlogs~=15.0",
    "jsonschema~=4.23",
    "pydantic~=2.8",
    "rdkit~=2024.3",
    "referencing~=0.35",
    "requests~=2.32"
]

[project.scripts]
mite_extras = "mite_extras.main:main_cli"

[project.optional-dependencies]
dev = [
    "pre-commit~=3.4",
    "pytest~=7.4",
    "ruff~=0.5"
]

[tool.hatch.envs.dev]
features = [
    "dev"
]

# Below are settings for plugin tools

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = [
  "src/mite_extras"
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    # flake8-bugbear
    "B",
    # flake8-comprehensions
    "C4",
    # flake8-eradicate/eradicate
    "ERA",
    # isort
    "I",
    # pep8-naming
    "N",
    # flake8-pie
    "PIE",
    # pygrep
    "PGH",
    # ruff checks
    "RUF",
    # flake8-simplify
    "SIM",
    # flake8-type-checking
    "TCH",
    # flake8-tidy-imports
    "TID",
    # pyupgrade
    "UP",
]
ignore = [
    # whitespace-before-punctuation
    "E203",
    # percent-format-invalid-format
    "E501",
    # mixed-case-variable-in-class-scope
    "N815"
]